Changes baseURL to janelia address.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://JaneliaSciComp.github.io/hortacloud-website"
+baseURL = "https://hortacloud.janelia.org"
 title = "HortaCloud"
 
 # Language settings
