--- a/config.toml
+++ b/config.toml
@@ -77,7 +77,7 @@ section = ["HTML", "print", "RSS"]
 
 [params]
 copyright = "Howard Hughes Medical Institute"
-privacy_policy = "https://www.hhmi.org/privacy-policys"
+privacy_policy = "https://www.hhmi.org/privacy-policy"
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
