--- a/config.toml
+++ b/config.toml
@@ -160,10 +160,10 @@ enable = false
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 
 [[params.links.user]]
-  name = "User mailing list"
-  url = "https://groups.google.com/g/hortacloud-support"
+  name = "Email us"
+  url = "mailto:hortacloud@janelia.hhmi.org"
   icon = "fa fa-envelope"
-  desc = "Discussion and help from your fellow users"
+  desc = "Email the HortaCloud software developers"
 
 [[params.links.user]]
   name ="Twitter"
@@ -174,10 +174,16 @@ enable = false
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 
 [[params.links.developer]]
+  name = "Project management board"
+  url = "https://github.com/orgs/JaneliaSciComp/projects/3"
+  icon = "fas fa-tasks"
+  desc = "GitHub project management board"
+
+[[params.links.developer]]
   name = "GitHub"
-  url = "https://github.com/JaneliaSciComp/hortacloud-website"
+  url = "https://github.com/JaneliaSciComp/hortacloud"
   icon = "fab fa-github"
-  desc = "GitHub code repository for this website"
+  desc = "GitHub code repository"
 
 
 # hugo module configuration
