--- a/hugo.toml
+++ b/hugo.toml
@@ -127,12 +127,13 @@ prism_syntax_highlighting = true
 
 # User interface configuration
 [params.ui]
+#showLightDarkModeMenu = true 
 #  Set to true to disable breadcrumb navigation.
 breadcrumb_disable = false
 # Set to true to disable the About link in the site footer
 footer_about_disable = true
 # Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top navbar
-navbar_logo = false
+navbar_logo = true
 # Set to true if you don't want the top navbar to be translucent when over a `block/cover`, like on the homepage.
 navbar_translucent_over_cover_disable = false
 # Enable to show the side bar menu in its compact state.
@@ -166,10 +167,10 @@ enable = false
   desc = "Email the HortaCloud software developers"
 
 [[params.links.user]]
-  name ="Twitter"
+  name ="X"
   url = "https://twitter.com/HortaCloud"
   icon = "fab fa-twitter"
-  desc = "Follow us on Twitter to get the latest news!"
+  desc = "Follow us on X to get the latest news!"
 
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 
