--- a/hugo.toml
+++ b/hugo.toml
@@ -117,7 +117,7 @@ github_branch= "main"
 #gcs_engine_id = "d72aa9b2712488cc3"
 
 # Enable Algolia DocSearch
-algolia_docsearch = false
+#algolia_docsearch = false
 
 # Enable Lunr.js offline search
 offlineSearch = true
@@ -131,7 +131,7 @@ prism_syntax_highlighting = true
 #  Set to true to disable breadcrumb navigation.
 breadcrumb_disable = false
 # Set to true to disable the About link in the site footer
-footer_about_disable = true
+footer_about_enable = false
 # Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top navbar
 navbar_logo = true
 # Set to true if you don't want the top navbar to be translucent when over a `block/cover`, like on the homepage.
